@@ -12,6 +12,10 @@ What's New in Python 2.6.5
 Core and Builtins
 -----------------
 
+- Issue #7309: Fix unchecked attribute access when converting
+  UnicodeEncodeError, UnicodeDecodeError, and UnicodeTranslateError to
+  strings.
+
 - Issue #7649: Fix u'%c' % char for character in range 0x80..0xFF, raise an
   UnicodeDecodeError
 
